fix centering and overflow of appDrawer if maximised and right panel closed

--- a/res/css/views/elements/_ResizeHandle.scss
+++ b/res/css/views/elements/_ResizeHandle.scss
@@ -33,8 +33,8 @@ limitations under the License.
 }
 
 .mx_MatrixChat > .mx_ResizeHandle.mx_ResizeHandle_horizontal {
-    margin: 0 -10px 0 0;
-    padding: 0 8px 0 0;
+    // margin: 0 0px 0 0;
+    // padding: 0 8px 0 0;
 }
 
 .mx_ResizeHandle.mx_ResizeHandle_horizontal > div {
